<resources>
    <string name="app_name">AvoidGrapefruit</string>
    <string name="logout">Logout</string>
    <string name="no_results">We haven`t found anything related in our database</string>
    <string name="title_home">Home</string>
    <string name="title_product">Product</string>
    <string name="title_user">User</string>
    <string name="brand_names">Brand Names</string>
    <string name="synonyms">Synonyms</string>
    <string name="tags">Tags</string>
    <string name="product_name">Product Name</string>
    <string name="product_picture">product picture</string>
    <string name="category">Category</string>
    <string name="item_title">Item Title</string>
    <string name="description">Description</string>
    <string name="severity">Severity:</string>
    <string name="dosage">XXmg - XX/day</string>
    <string name="intake_time">08:00, 20:00</string>
    <string name="add_to_my_drugs">Add to My Drugs</string>
    <string name="back">back</string>
    <string name="drug_name">Drug name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="amount_per_day">Amount per day</string>
    <string name="select_intake_times">Select Intake Times</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="save_drug">Save Drug</string>
    <string name="intake_times">Intake Times</string>
    <string name="search_drug">Search drug…</string>
    <string name="search_icon">Search icon</string>
    <string name="add_user_drug">Add as Personal Drug</string>
    <string name="avatar">profile pic</string>
    <string name="email_example">user@example.com</string>
    <string name="username">Username</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="medical_conditions">Medical Conditions</string>
    <string name="allergies">Allergies</string>
    <string name="save">Save</string>
    <string name="active">Active</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email">Email</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="google_logo">Google logo</string>
    <string name="google">Google</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_sign_up_with">Or sign up with</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="background">Background</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="user_details">User Details</string>
    <string name="user_drug_list">My Meds</string>
    <string name="add">Add</string>
    <string name="user_info">Personal Info</string>
    <string name="verification_link">A verification link has been sent to your email. Please click it and then press the button below.</string>
    <string name="verified_button">I\'ve Verified My Email</string>
</resources>